feat(auth): standardize users and cloud admin on email identity